--- a/Education.html
+++ b/Education.html
@@ -40,7 +40,7 @@
                 <img class="cross" src="cross.png" alt="">
             </div>
             <div class="edu_intro">
-            <h1>Doing B.tech form IITG 
+            <h1>Pursuing B.tech form IITG 
                 sophomore student of Enginnering physics Department
             </h1>
         </div>
