--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="devinfo">
                      <div class="hello">Hi i am</div>
                      <div class="name">subam kumar</div>
-                     <div class="about">CP enthusatic, developer, Ai/ml</div>
+                     <div class="about">CP enthusiastic, developer, AI/ML</div>
                      <div class="moreabout">Hello i am a developer and i love to play chess. I love to visit
                         different places with my family. currently studying in IIT guwahati.
                      </div>
