--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="Myintro.html">My Intro</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="contacts.html">contacts</a></li>
-                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="projects.html">Election</a></li>
                     <li> <a href="Education.html">Education</a></li>
 
                 </ul>
