--- a/Myintro.html
+++ b/Myintro.html
@@ -18,7 +18,7 @@
             <!-- <div class="subham">
                 subham kumar
             </div> -->
-            <!-- subham kumar -->
+           
             <nav>
                 <ul id="SideBar">
                     
@@ -48,7 +48,7 @@
                     as a solid understanding of machine learning concepts and algorithms. I am constantly learning and
                     staying up-to-date with the latest developments in the field to improve my skills and deliver
                     high-quality work. I am excited to be a part of the rapidly growing field of AI and looking forward
-                    to utilizing my skills to make a difference.
+                    to utilizing my skills to make a difference.ds
                 </p>
 
                 <h2>My Skills</h2>
