--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Welcome to subham website</title>
+    <title>Welcome to subham website </title>
     <link rel="stylesheet" href="styles.css">
 
 </head>
@@ -43,7 +43,7 @@
             <div class="infocontainer">
                 <div class="devinfo">
                      <div class="hello">Hi i am</div>
-                     <div class="name">subam kumar</div>
+                     <div class="name">subham kumar</div>
                      <div class="about">CP enthusiastic, developer, AI/ML</div>
                      <div class="moreabout">Hello i am a developer and i love to play chess. I love to visit
                         different places with my family. currently studying in IIT guwahati.
