--- a/Education.html
+++ b/Education.html
@@ -40,9 +40,23 @@
                 <img class="cross" src="cross.png" alt="">
             </div>
             <div class="edu_intro">
-            <h1>Pursuing B.tech form IITG 
-                sophomore student of Enginnering physics Department
-            </h1>
+                <div class="class_10th" >
+                    <p style=" margin-top: 10px; color: brown;">
+                        PRIMARY SCHOOL
+                    </p>
+                    COMPLETED CLASS 10 ON THE ICSE BOARD AT LOHIA NAGAR MOUNT CARMEL HIGH SCHOOL IN LOHIA NAGAR.                </div>
+               <p style=" margin-top: 10px; color: brown;">
+                SECONDARY SCHOOL
+               </p>
+                <div class="class_12th">
+                    COMPLETED CLASS 10 ON THE CBSE BOARD AT PRAKASH PUNJ PUBLIC SCHOOL.
+                </div>
+           <div class="collage">
+            <p style=" margin-top: 10px; color: brown;">
+                COLLAGE
+            </p>
+            SOPHOMORE PRESENTLY PURSUING A B.TECH AT IITG GUWAHATI
+           </div>
         </div>
         </div>
     </div>
