--- a/blog.html
+++ b/blog.html
@@ -44,28 +44,28 @@
                 <div class="blogitem">
                     <h2>Learn more about machine learning</h2>
                     <p>
-                      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus asperiores reiciendis temporibus veniam dignissimos ipsam aliquid repudiandae, perferendis doloremque odit labore blanditiis amet, similique sint! Beatae sed cum cumque repudiandae.
+                      SOON TO BE UPDATED...........
                     </p>
                     <button class="btn btn-sm">Read More</button>
                 </div>
                 <div class="blogitem">
                     <h2>Learn about Deep learning</h2>
                     <p>
-                      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus asperiores reiciendis temporibus veniam dignissimos ipsam aliquid repudiandae, perferendis doloremque odit labore blanditiis amet, similique sint! Beatae sed cum cumque repudiandae.
+                        SOON TO BE UPDATED...........
                     </p>
                     <button class="btn btn-sm">Read More</button>
                 </div>
                 <div class="blogitem">
                     <h2>Top ten famous algorithms</h2>
                     <p>
-                      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus asperiores reiciendis temporibus veniam dignissimos ipsam aliquid repudiandae, perferendis doloremque odit labore blanditiis amet, similique sint! Beatae sed cum cumque repudiandae.
+                        SOON TO BE UPDATED...........
                     </p>
                     <button class="btn btn-sm">Read More</button>
                 </div>
                 <div class="blogitem">
                     <h2>How to learn Backend development</h2>
                     <p>
-                      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus asperiores reiciendis temporibus veniam dignissimos ipsam aliquid repudiandae, perferendis doloremque odit labore blanditiis amet, similique sint! Beatae sed cum cumque repudiandae.
+                        SOON TO BE UPDATED...........
                     </p>
                     <button class="btn btn-sm">Read More</button>
                 </div>
