--- a/home_page.html
+++ b/home_page.html
@@ -43,7 +43,7 @@
             <div class="infocontainer">
                 <div class="devinfo">
                      <div class="hello">Hi i am</div>
-                     <div class="name">subam kumar</div>
+                     <div class="name">subham kumar</div>
                      <div class="about">CP enthusatic, developer, Ai/ml</div>
                      <div class="moreabout">Hello i am a developer and i love to play chess. I love to visit
                         different places with my family. currently studying in IIT guwahati.
