--- a/Education.html
+++ b/Education.html
@@ -44,7 +44,7 @@
                     <p style=" margin-top: 10px; color: brown;">
                         PRIMARY SCHOOL
                     </p>
-                    COMPLETED CLASS 10 ON THE ICSE BOARD AT LOHIA NAGAR MOUNT CARMEL HIGH SCHOOL IN LOHIA NAGAR.                </div>
+                    COMPLETED CLASS 10 ON THE ICSE BOARD AT LOHIA NAGAR MOUNT CARMEL HIGH SCHOOL.                </div>
                <p style=" margin-top: 10px; color: brown;">
                 SECONDARY SCHOOL
                </p>
@@ -55,7 +55,7 @@
             <p style=" margin-top: 10px; color: brown;">
                 COLLAGE
             </p>
-            SOPHOMORE PRESENTLY PURSUING A B.TECH AT IITG GUWAHATI
+            SOPHOMORE PRESENTLY PURSUING A B.TECH AT IIT GUWAHATI
            </div>
         </div>
         </div>
