--- a/Education.html
+++ b/Education.html
@@ -44,12 +44,12 @@
                     <p style=" margin-top: 10px; color: brown;">
                         PRIMARY SCHOOL
                     </p>
-                    COMPLETED CLASS 10 ON THE ICSE BOARD AT LOHIA NAGAR MOUNT CARMEL HIGH SCHOOL.                </div>
+                    COMPLETED CLASS 10th ON THE ICSE BOARD AT LOHIA NAGAR MOUNT CARMEL HIGH SCHOOL.                </div>
                <p style=" margin-top: 10px; color: brown;">
                 SECONDARY SCHOOL
                </p>
                 <div class="class_12th">
-                    COMPLETED CLASS 10 ON THE CBSE BOARD AT PRAKASH PUNJ PUBLIC SCHOOL.
+                    COMPLETED CLASS 12th ON THE CBSE BOARD AT PRAKASH PUNJ PUBLIC SCHOOL.
                 </div>
            <div class="collage">
             <p style=" margin-top: 10px; color: brown;">
