--- a/projects.html
+++ b/projects.html
@@ -117,11 +117,11 @@ etc.
                 <div class="title_agenda">
                     A proper portal for attendance tracking
                 </div>
-                <div class="video_agenda">
+               <!-- <div class="video_agenda">
                     <div class="title_agenda">Introudction Video</div>
                     <div class="space"></div>
                     <iframe src="https://www.youtube.com/embed/Da3cvRJcY8s" frameborder="0" allowfullscreen></iframe>
-                  </div>
+                  </div>      !-->
                 
                 
 
